# llm-training

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  build_local_run.sh  docker-compose-demo.yml  docker-compose.yml  export_model.py  pyproject.toml  requirements.txt  run_demo.sh  run_evaluation.sh  run_train.sh  train_bash.py
config/: __init__.py  evaluation.yaml  train.yaml
config/deepspeed/: ds_config.jinja
data/: __init__.py  loader.py  preprocess.py  pretrain_datasets.py  process_large_file.py  sft_datasets.py
data_samples/: dataset_info.json
data_samples/evaluation/: dany_eval.jsonl
data_samples/pretrain/: school_introduce.txt
data_samples/sft/: generated_chat.jsonl.archived  seq_classification.jsonl
deploy/api_server/: README.md  main.py
deploy/dialog_demo/: README.md  chat.py  llm_infer.py  streamlit_web.py
docker/cu118-ubuntu22.04-base/: Dockerfile
docker/cu119-ubuntu22.04-train/: Dockerfile
docs/: problem.md
modeling/: __init__.py  config.py  interface.py  modeling_factory.py
modeling/baichuan/: baichuan_modeling.py
modeling/baichuan_chat/: baichuan_chat_modeling.py
modeling/chatglm_v2/: chatglm_v2_modeling.py
modeling/chatgpt/: chatgpt_modeling.py
modeling/gpt2/: gpt2_modeling.py
modeling/llama/: llama_modeling.py
modeling/llama3_classification/: llama3_classification_modeling.py
modeling/moss/: moss_modeling.py
test/: test_pretrain_datasets.py  test_sft_datasets.py
tools/: README.md
tools/dataset_clean/: README.md  (+5 more)
utils/: __init__.py  eva.py  io_file.py  jinja_template.py  logger.py  xls.py
(+74 files in other folders)
