[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["zjin"]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.28.1"
openai = "^0.27.4"
deepspeed = "0.9.1"
accelerate = "^0.18.0"
sentencepiece = "^0.1.98"
tensorboardx = "^2.6"
torch = "^2.0.0"
tensorboard = "^2.12.2"
loguru = "^0.7.0"
jsonlines = "^3.1.0"
mpi4py = "^3.1.4"
datasets = "^2.12.0"
evaluate = "^0.4.0"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"
retrying = "^1.3.4"

[tool.poetry.dev-dependencies]


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["poetry==1.1.11"]
build-backend = "poetry.masonry.api"
